--- a/style.css
+++ b/style.css
@@ -40,16 +40,18 @@ body{
 }
 
 .region-container{
-    
-    
     display: flex;
     flex-direction: column;
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     border: 1px solid brown;
     padding: 12px;
-    gap: 12px;
-    font-size: 18px;
+    gap: 15px;
+    font-size: 20px;
+    border-radius: 12px;
+    backdrop-filter: blur(200%);
+    background-color: skyblue;
+    text-align: center;
 }
 
 .PHWind>p{
@@ -75,8 +77,7 @@ body{
     background-color: transparent;
     border: none;
     border-bottom: 2px solid blue;
-    /* border-radius: 8px; */
-}
+    }
 
 .search-box>button{
 
